# bmf-gosdk

./: .gitignore  go.mod  readme.md
bmf/: audio_frame.go  audio_frame_test.go  bmf_av_packet.go  bmf_av_packet_test.go  cgo.go  module.go  module_capi.go  module_functor.go  module_functor_test.go  module_info.go  module_tag.go  module_test.go  packet.go  packet_test.go  task.go  task_test.go  video_frame.go  video_frame_test.go
builder/: builder.go  cgo.go  ffmpeg_module.go  graph.go  internal.go  internal_test.go  node.go  stream.go  structure.go  updator.go  utils.go
example/: go.mod  pass_through.go
example/custom_ffmpeg/: README.md
example/custom_ffmpeg/cpp/: CMakeLists.txt  custom_ffmpeg.cpp  custom_ffmpeg.h
example/custom_ffmpeg/go/: avframe.go  custom_ffmpeg.go  custom_ffmpeg_test.go
hmp/: cgo.go  device.go  formats.go  formats_test.go  image.go  image_test.go  scalar.go  scalar_type.go  stream.go  stream_test.go  tensor.go  tensor_test.go
